# VCVMCP

./: .cursorrules  .gitignore  CMakeLists.txt  PRD_ VCV Rack Model Context Protocol (MCP).md  README.md  VCV Rack MCP V1 - Agile Development Plan.md
docs/: README.md  api_documentation.md  api_improvements.md  documentation_plan.md  glossary.md  known_issues.md  message_formats.md  standard_topics.md  topic_best_practices.md  topic_naming_conventions.md  topic_registration.md  topics_documentation.md
docs/concepts/: introduction.md
docs/guides/: provider_implementation.md  quickstart.md  serialization.md  subscriber_implementation.md  thread_safety.md
examples/: CMakeLists.txt  ReferenceModulesExample.cpp  SerializationExample.cpp
examples/broker-registration/: main.cpp
examples/reference-implementation/: main.cpp
include/mcp/: IMCPBroker.h  IMCPProvider_V1.h  IMCPSubscriber_V1.h  MCPBroker.h  MCPMessage_V1.h  MCPReferenceProvider.h  MCPReferenceSubscriber.h  MCPRingBuffer.h  MCPSerialization.h  MCPVariant.h
include/rack/framework/: mock.h
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/mcp/: IMCPBroker.cpp  MCPBroker.cpp  MCPReferenceProvider.cpp  MCPReferenceSubscriber.cpp  MCPSerialization.cpp
src/rack/framework/: mock.cpp
test/: CMakeLists.txt
test/mcp/: BrokerTests.cpp  PerformanceTests.cpp  PublishSubscribeTests.cpp  ReferenceImplementationTests.cpp  RingBufferStressTest.cpp  RingBufferTests.cpp  SerializationTests.cpp
